<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Quake Report</string>
    <string name="settings">Settings</string>
    <string name="color_scheme">Dark Color Scheme</string>
    <string name="query_api">Settings</string>
    <string name="quit">Quit</string>
    <string name="defaultt">Default count is 100</string>
    <string name="defaultsd">Default start date is 1 Jan 2020</string>
    <string name="defaulted">Default end date is 2 Jan 2020</string>
    <string name="minmagnitude">Min-Magnitude is 3</string>
    <string name="asc">Ascending Order</string>
    <string name="dsc">Descending Order</string>
    <string name="order_by_time">Order by Time</string>
    <string name="order_by_magnitude">Order by Magnitude</string>
    <string name="no_earthquake">No EarthQuakes Found</string>
</resources>
