<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/defaultt"
        android:inputType="number">
    </EditText>

    <EditText
        android:id="@+id/starttime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/defaultsd"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/endtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/defaulted"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/magnitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/minmagnitude"
        android:inputType="number">
    </EditText>

    <TextView
        android:layout_marginTop="20dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_by_time">
    </TextView>

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="@string/asc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </RadioButton>

            <RadioButton
                android:text="@string/dsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </RadioButton>

        </RadioGroup>

    <TextView
        android:layout_marginTop="20dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_by_magnitude">
    </TextView>

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="@string/asc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </RadioButton>

            <RadioButton
                android:text="@string/dsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </RadioButton>

        </RadioGroup>

</LinearLayout>
</ScrollView>
